--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -16,7 +16,7 @@
                           <a class="btn modal-trigger right new-post" href="#demo-modal">New Post</a>
 
 
-          <!--<app-add-post></app-add-post>-->
+          <!--<app-add-post></app-add-post> hello world-->
 </div>
 
       </div>
